Responsive web design

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Alx_html_css</title>
   </head>
-  <body>
+  <body class="works_on_smartphone">
     <header>
       <ul>
         <li><a href="index.html">Home</a></li>
