add some styles

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -8,6 +8,9 @@
   </head>
   <body class="works_on_smartphone">
     <header>
+      <span class="logo">&#9733;</span>
+      <!-- Unicode character for the logo -->
+      bini design &lt; &gt;
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="tweets.html">Tweets</a></li>
