build the testimonial section

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -75,16 +75,17 @@
           </div>
         </section>
     </section>
-      <section>
-        <div>
-          <img src="./images/Bitmap.png" alt="image" />
+      <section class="testimonial">
+        <div class="testimonial-img">
+          <img src="img/5.png" alt="image" />
         </div>
-        <div>
-          <blockquote>
+        <div class="testimonial-text">
+          <blockquote class="testimonial-quote">
             « Those tutorials are concise and go straight to the point. I can’t
-            think of a better place to learn smiling. And it’s so fun!
+            think of a better
+             place to learn smiling. And it’s so fun!
           </blockquote>
-          <h3>NAME</h3>
+          <h3> Person Name</h3>
           <p>weather presenter</p>
         </div>
       </section>
