--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -89,130 +89,165 @@
           <p>weather presenter</p>
         </div>
       </section>
-      <section>
-        <h2>Most popular tutorials</h2>
-        <div>
-          <img src="./images/Bitmap (1).png" alt="" />
-          <h3>Diagonal Smile</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
-          </p>
+      <section class=" container popular">
+        <h2 class="popular-heading">Most <div class="popular-purple">popular</div> tutorials</h2>
+        <div class="popular-card">
           <div>
-            <img src="./images/1 (3).png" alt="" />
-            <h4>Phillip Massey</h4>
-          </div>
-          <div>
-            <div><i class="fa-solid fa-star"></i></div>
-            <div><i class="fa-solid fa-star"></i></div>
-            <div><i class="fa-solid fa-star"></i></div>
-            <div><i class="fa-solid fa-star"></i></div>
-            <div><i class="fa-solid fa-star"></i></div>
-          </div>
-          <p>8 min</p>
-        </div>
-        <div>
-          <img src="./images/Bitmap (4).png" alt="" />
-          <h3>Happy Smile</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
-          </p>
-          <div>
-            <img src="./images/1 (3).png" alt="" />
-            <h4>Phillip Massey</h4>
-          </div>
-          <div>
-            <div><i class="fa-solid fa-star"></i></div>
-            <div><i class="fa-solid fa-star"></i></div>
-            <div><i class="fa-solid fa-star"></i></div>
-            <div><i class="fa-solid fa-star"></i></div>
-            <div><i class="fa-solid fa-star"></i></div>
-          </div>
-          <p>8 min</p>
-        </div>
-        <div>
-          <img src="./images/Bitmap (3).png" alt="" />
-          <h3>Natural Smile</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
-          </p>
-          <div>
-            <img src="./images/1 (3).png" alt="" />
-            <h4>Phillip Massey</h4>
-          </div>
-          <div>
-            <div><i class="fa-solid fa-star"></i></div>
-            <div><i class="fa-solid fa-star"></i></div>
-            <div><i class="fa-solid fa-star"></i></div>
-            <div><i class="fa-solid fa-star"></i></div>
-            <div><i class="fa-solid fa-star"></i></div>
-          </div>
-          <p>8 min</p>
-        </div>
-        <div>
-          <img src="./images/Bitmap (2).png" alt="" />
-          <h3>Sad Smile</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
-          </p>
-          <div>
-            <img src="./images/1 (3).png" alt="" />
-            <h4>Phillip Massey</h4>
-          </div>
-          <div>
-            <div><i class="fa-solid fa-star"></i></div>
-            <div><i class="fa-solid fa-star"></i></div>
-            <div><i class="fa-solid fa-star"></i></div>
-            <div><i class="fa-solid fa-star"></i></div>
-            <div><i class="fa-solid fa-star"></i></div>
-          </div>
-          <p>8 min</p>
-        </div>
-      </section>
-      <section>
-        <h2>Free membership</h2>
-        <div>
-          <img src="./images/smile.svg" alt="" />
-          <h3>Lorem Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-        <div>
-          <img src="./images/smile.svg" alt="" />
-          <h3>Lorem Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-        <div>
-          <img src="./images/smile.svg" alt="" />
-          <h3>Lorem Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-        <div>
-          <img src="./images/smile.svg" alt="" />
-          <h3>Lorem Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-        <button>REGISTER FOR FREE</button>
-      </section>
-      <section>
-        <h2>F.A.Q</h2>
-        <div>
-          <div>
-            <div>
-              <h3>How does this work?</h3>
+            <div class="img-embed">
+              <img src="img/9.png" alt="" class="main-img" />
+              <img src="img/play.png" alt="" class="play-img">
             </div>
-            <div>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-              sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <div class="popular-text">
+              <h3 class="popular-heading3">Diagonal Smile</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
+              </p>
+            </div>
+            <div class="popular-content">
+              <img src="img/1.png" alt="" class="popular-phillip" />
+              
+              <h4 class="heading-phillip">Phillip Massey</h4>
+            </div>
+            <div class="star-time">
+              <div class="star">
+                <div><i class="fa-solid fa-star"></i></div>
+                <div><i class="fa-solid fa-star"></i></div>
+                <div><i class="fa-solid fa-star"></i></div>
+                <div><i class="fa-solid fa-star"></i></div>
+                <div><i class="fa-solid fa-star"></i></div>
+              </div>
+              <p>8 min</p>
+            </div>
+          </div>
+          <div>
+            <div class="img-embed">
+              <img src="img/6.png" alt="" class="main-img" />
+              <img src="img/play.png" alt="" class="play-img">
+            </div>
+            <div class="popular-text">
+              <h3>Happy Smile</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
+              </p>
+            </div>
+            <div class="popular-content">
+              <img src="img/1.png" alt="" class="popular-phillip" />
+              <h4 class="heading-phillip">Phillip Massey</h4>
+            </div>
+            <div class="star-time">
+              <div class="star">
+                <div><i class="fa-solid fa-star"></i></div>
+                <div><i class="fa-solid fa-star"></i></div>
+                <div><i class="fa-solid fa-star"></i></div>
+                <div><i class="fa-solid fa-star"></i></div>
+                <div><i class="fa-solid fa-star"></i></div>
+              </div>
+              <p>8 min</p>
+            </div>
+          </div>
+          <div>
+            <div class="img-embed">
+              <img src="img/8.png" alt="" class="main-img" />
+              <img src="img/play.png" alt="" class="play-img">
+            </div>
+            <div class="popular-text">
+              <h3>Natural Smile</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
+              </p>
+            </div>
+            <div class="popular-content">
+              <img src="img/1.png" alt="" class="popular-phillip" />
+              <h4 class="heading-phillip">Phillip Massey</h4>
+            </div>
+            <div class="star-time">
+              <div class="star">
+                <div><i class="fa-solid fa-star"></i></div>
+                <div><i class="fa-solid fa-star"></i></div>
+                <div><i class="fa-solid fa-star"></i></div>
+                <div><i class="fa-solid fa-star"></i></div>
+                <div><i class="fa-solid fa-star"></i></div>
+              </div>
+              <p>8 min</p>
+              </div>
+            </div>
+          <div>
+            <div class="img-embed">
+              <img src="img/7.png" alt="" class="main-img" />
+              <img src="img/play.png" alt="" class="play-img">
+            </div>
+            <div class="popular-text">
+              <h3>Sad Smile</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
+              </p>
+            </div>
+            <div class="popular-content">
+              <img src="img/1.png" alt="" class="popular-phillip" />
+              <h4 class="heading-phillip">Phillip Massey</h4>
+            </div>
+            <div class="star-time">
+              <div class="star">
+                <div><i class="fa-solid fa-star"></i></div>
+                <div><i class="fa-solid fa-star"></i></div>
+                <div><i class="fa-solid fa-star"></i></div>
+                <div><i class="fa-solid fa-star"></i></div>
+                <div><i class="fa-solid fa-star"></i></div>
+              </div>
+              <p>8 min</p>
+              </div>
+            </div>
+          </div>
+      </section>
+      <section class="membership">
+        <h2><div>Free</div> membership</h2>
+        <div class="membership-row">
+          <div class="membership-card">
+            <img src="img/smile.png" alt="" />
+            <h3>Lorem Ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+          <div class="membership-card">
+            <img src="img/smile.png" alt="" />
+            <h3>Lorem Ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+          <div class="membership-card">
+            <img src="img/smile.png" alt="" />
+            <h3>Lorem Ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+          <div class="membership-card">
+            <img src="img/smile.png" alt="" />
+            <h3>Lorem Ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+        </div>
+        <div class="btn"><button class="btn-text">REGISTER FOR FREE</button></div>
+      </section>
+      <section class="faq">
+        <h2>F.A.Q</h2>
+        <div class=" container faq-grid">
+          <div>
+            <div class="faq-content">
+              <div class="faq-heading">
+                <h3>How does this work?</h3>
+              </div>
+              <div class="faq-para">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </div>
             </div>
 
             <div>
               <h3>How does this work?</h3>
             </div>
-            <div>
+            <div class="faq-para">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
@@ -223,29 +258,33 @@
             </div>
           </div>
           <div>
-            <div>
-              <h3>How does this work?</h3>
+            <div class="faq-content">
+              <div>
+                <h3>How does this work?</h3>
+              </div>
+              <div class="faq-para">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </div>
             </div>
-            <div>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-              sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </div>
-            <div>
-              <h3>How does this work?</h3>
-            </div>
-            <div>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-              sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <div class="faq-content">
+              <div>
+                <h3>How does this work?</h3>
+              </div>
+              <div class="faq-para">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </div>
             </div>
           </div>
         </div>
@@ -253,12 +292,12 @@
     </main>
     <footer>
       <section>
-        <div>
-          <img src="https://fakeimg.pl/250x250?text=Sample+Logo" alt="logo" />
-          <div>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-instagram"></i>
+        <div class="footer-section">
+          <img src="img/logo.png" alt="logo" />
+          <div class="social-icons">
+            <i class="fa-brands fa-facebook icon"></i>
+            <i class="fa-brands fa-twitter icon"></i>
+            <i class="fa-brands fa-instagram icon"></i>
           </div>
         </div>
         <p>©smileschool 2020</p>
