the header section

--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="0-styles.css" />
-    <link rel="stylesheet" href="queries.css" />
 
     <title>headphones</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -71,7 +70,7 @@
             >Lorem ipsum dolor set amet lorem ipsum dolor set</span
           >
 
-          <button>CALL TO action</button>
+          <button>CALL TO ACTION</button>
           <p class="hero-description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
